--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,11 +3,15 @@
 @tailwind utilities;
 
 @layer components {
-  .heroButton {
-    @apply px-3 md:px-6 py-2 border border-lightBackground rounded-full uppercase text-xs tracking-widest text-gray-500 transition-all hover:border-darkGreen/40 hover:text-darkGreen/40;
-  }
+ .heroButton{
+  @apply px-3 md:px-6 py-2 border border-[#242424] rounded-full uppercase text-xs 
+  tracking-widest text-gray-500 transition-all
+    hover:border-[#41B3C4]/40 hover:text-[#41B3C4]/40;
+ }
 
   .contactInput {
-    @apply outline-none bg-slate-400/20 rounded-lg border-b-2 px-6 py-3 md:py-4  text-gray-500 placeholder-gray-500 transition-all focus:border-darkGreen/20 focus:text-darkGreen/80 hover:border-darkGreen/20;
+    @apply outline-none bg-slate-400/10 rounded-sm border-b px-6 py-4
+    border-[#242424] text-gray-500 placeholder-gray-500 transition-all
+    focus:border-[#41B3C4]/40 focus:text-[#41B3C4]/40;
   }
 }
